package pers.mtx.adapter.objectadapter;

public interface Voltage5V {
    public int output5V();
}
